# claude-account-switcher

./: .gitignore  README.md  RUST_CLI_PLAN.md  magical-noodling-hellman.md  marketplace.json
.claude-plugin/: marketplace.json
account-switcher/: README.md
account-switcher/.claude-plugin/: plugin.json
account-switcher/commands/: add-account.md  list-accounts.md  remove-account.md  rename-account.md  switch-account.md  whoami.md
claude-switch/: Cargo.toml  README.md
claude-switch/src/: credentials.rs  error.rs  lib.rs  main.rs  metadata.rs  paths.rs
claude-switch/src/commands/: add.rs  current.rs  list.rs  mod.rs  remove.rs  rename.rs  use_account.rs
