[package]
name = "claude-switch"
version = "0.1.0"
edition = "2021"
authors = ["shivang2000"]
description = "Switch between multiple Claude Pro accounts - zero token usage"
repository = "https://github.com/shivang2000/claude-account-switcher"
license = "MIT"
keywords = ["claude", "cli", "account", "switch"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
colored = "2"
anyhow = "1"
thiserror = "1"

[[bin]]
name = "claude-switch"
path = "src/main.rs"
